Project PassengerMultiManager {
  database_type: "PostgreSQL"
  Note: "GR2 - Passenger Management + Attendance Realtime"
}

Table tenants {
  id uuid [pk]
  name text [not null, unique]
  description text
  created_at timestamptz [not null]
}

Table users {
  id uuid [pk]
  email text [not null, unique]
  password_hash text
  description text
  created_at timestamptz [not null]
  latest_at timestamptz
}

Table roles {
  id uuid [pk]
  name text [not null, unique] // SystemAdmin, Admin, BusManager, Disable
  description text
}

Table user_tenant_roles {
  id uuid [pk]
  user_id uuid [not null]
  tenant_id uuid // SystemAdmin có thể null (global)
  role_id uuid [not null]
  is_active boolean [not null, default: true]

  Indexes {
    (user_id, tenant_id, role_id) [unique]
  }
}

Table trips {
  id uuid [pk]
  tenant_id uuid [not null]
  name text [not null]
  status text [not null, default: "Doing"] // Doing|Done
  description text
  created_at timestamptz [not null]
}

Table rounds {
  id uuid [pk]
  trip_id uuid [not null]
  name text [not null]
  time_text text
  status text [not null, default: "Doing"]
  sort_order int [not null, default: 0]
}

Table buses {
  id uuid [pk]
  trip_id uuid [not null]
  bus_code text [not null] // Xe 1, Xe 2...
  registration_number text
  driver_name text
  driver_tel text
  tour_guide_name text
  tour_guide_tel text
  description text
  manager_id uuid // BusManager user

  Indexes {
    (trip_id, bus_code) [unique]
  }
}

Table passengers {
  id uuid [pk]
  tenant_id uuid [not null]
  full_name text [not null]
  tel text
  zalo text
  facebook text
  note text
}

Table trip_passengers {
  id uuid [pk]
  trip_id uuid [not null]
  passenger_id uuid [not null]
  assigned_bus_id uuid
  note text

  Indexes {
    (trip_id, passenger_id) [unique]
  }
}

Table attendance_records {
  id uuid [pk]
  round_id uuid [not null]
  trip_passenger_id uuid [not null]
  check_in boolean [not null, default: false]
  check_out boolean [not null, default: false]
  abnormal_note text
  updated_by uuid
  updated_at timestamptz [not null]

  Indexes {
    (round_id, trip_passenger_id) [unique]
  }
}

/* Relationships */
Ref: user_tenant_roles.user_id > users.id
Ref: user_tenant_roles.tenant_id > tenants.id
Ref: user_tenant_roles.role_id > roles.id

Ref: trips.tenant_id > tenants.id
Ref: rounds.trip_id > trips.id

Ref: buses.trip_id > trips.id
Ref: buses.manager_id > users.id

Ref: passengers.tenant_id > tenants.id

Ref: trip_passengers.trip_id > trips.id
Ref: trip_passengers.passenger_id > passengers.id
Ref: trip_passengers.assigned_bus_id > buses.id

Ref: attendance_records.round_id > rounds.id
Ref: attendance_records.trip_passenger_id > trip_passengers.id
Ref: attendance_records.updated_by > users.id
